Version 1.6.11
- BUG: Using spelling dictionaries in utf8 could crash
       the commit dialog. (Stefan)
- BUG: Dialogs could hang if they were closed if the
       modeless log dialog was still open. (Stefan)
- BUG: When checking an added file in the commit dialog,
       the parent folder wasn't checked automatically if
       it was added too. (Stefan)

Version 1.6.10
- BUG: Updating single items from the check-for-modifications
       dialog could lead to inconsistent working copies. (Stefan)
- BUG: Adding a file in an unversioned folder from the commit
       dialog only marked the file as added. (Stefan)
- BUG: The overlays didn't work on win2k up to XP SP2. (Stefan)
- BUG: The 'browse' button (...) in various dialogs did nothing
       when a file:/// url was specified. (Stefan)

Version 1.6.9
- BUG: the menu icons on XP were not shown correctly. (Stefan)
- BUG: the overlay icons could dissapear after upgrading from
       a previous version, a 'repair install' however would
	   fix this issue. (Stefan)
- BUG: Ignoring directories with a dot and extension in the name
       didn't work. (Stefan)
- BUG: Comparing an updated item in the update-progress dialog
       didn't work properly for items in an external 
       directory. (Stefan)

Version 1.6.8
- BUG: Exporting via DnD from the repository browser could 
       create garbled paths if the urls of the files 
       required escaping. (Stefan)
- BUG: Properties loaded from a file were not changed or
       added without a manual edit of the loaded content. (Stefan)
- BUG: The /logmsg param wasn't used in the copy command. (Stefan)
- BUG: The /logmsg param wasn't used in the import command. (Stefan)
- BUG: The commonUrl and commonRoot parameters in the
       CheckCommit method of the IBugtraqProvider2 interface
       could return wrong paths/urls. (Stefan)
- BUG: Updating two items from different paths to get a sparse
       checkout didn't work. (Stefan)